syntax = "proto3";

package message;

service MessageService {
  rpc GetMessages (Empty) returns (MessageList) {}
  rpc SendMessage (Message) returns (Message) {}
}

message Empty {}

message Message {
  int64 id = 1;
  string content = 2;
  string timestamp = 3;
}

message MessageList {
  repeated Message messages = 1;
} 